--- a/LibraryManagement.Web/Views/Book/Edit.cshtml
+++ b/LibraryManagement.Web/Views/Book/Edit.cshtml
@@ -7,6 +7,8 @@
 <h2>Edit Book</h2>
 
 <form asp-action="Edit" method="post">
+	@Html.AntiForgeryToken()
+    @Html.ValidationSummary(false, "", new { @class = "text-danger" })
     <input type="hidden" asp-for="Id" />
 
     <div class="form-group">
